--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,13 @@
 /build
 /captures
 .externalNativeBuild
+
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/gradle.xml
+.idea/assetWizardSettings.xml
+.idea/dictionaries
+.idea/libraries
+.idea/caches
+/.idea/misc.xml
+/.idea/vcs.xml
